--- a/css/main.css
+++ b/css/main.css
@@ -287,11 +287,29 @@ a {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .visually-hidden {
@@ -505,12 +523,17 @@ a {
 }
 
 .advantages__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .advantages__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .advantages__item {
@@ -538,6 +561,12 @@ a {
 .advantages__text {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 1199px) {
+  .services-block {
+    display: none;
+  }
 }
 
 .services {
@@ -603,15 +632,23 @@ a {
 }
 
 .command__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .command__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .command__item {
+  width: 270px;
   height: 428px;
   text-align: center;
   padding-bottom: 30px;
