--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,47 +1,53 @@
 .advantages {
-    padding-top: 94px;
+  padding-top: 94px;
 }
 
 .advantages__title {
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-weight: 700d;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $title-text-color;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 700d;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: $title-text-color;
 }
 
 .advantages__list {
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+
+  @media screen and (min-width: 768px) {
     display: flex;
-    padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .advantages__item {
-    flex-basis: calc((100% - 3 * 30px) / 4);
+  flex-basis: calc((100% - 3 * 30px) / 4);
 
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .advantages__background {
-    background-color: $secondary-background-color;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin-bottom: 30px;
-    text-align: center;
+  background-color: $secondary-background-color;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .advantages__icon {
-    width: 70px;
-    height: 70px;
+  width: 70px;
+  height: 70px;
 }
 
 .advantages__text {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
