--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -19,10 +19,14 @@
 }
 
 .command__list {
-  display: flex;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .command__item {
