--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -471,9 +471,6 @@ a {
 }
 
 .filter {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -530,9 +527,6 @@ a {
 }
 
 .works {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-left: 0;
@@ -541,7 +535,7 @@ a {
 
 .works__item {
   margin: 15px;
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
   width: calc((100% - 30px * 3) / 3);
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
