--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -19,7 +19,7 @@
   margin-bottom: 0;
 
   @media screen and (min-width: 768px) {
-    display: flex;
+    // display: flex;
   }
 
   @media screen and (min-width: 1200px) {
