--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -17,7 +17,7 @@
 
 .clients__link {
   color: #afb1b8;
-  display: flex;
+  //   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
