--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -8,17 +8,22 @@
 }
 
 .clients__list {
+  display: flex;
+  flex-wrap: wrap;
   padding-left: 0;
+  margin-right: 0px;
 }
 
-.clients__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .clients__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .clients__link {
   color: #afb1b8;
-  //   display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 170px;
