--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -4,7 +4,7 @@
 }
 
 .filter {
-  // display: flex;
+  display: flex;
   justify-content: center;
   padding-left: 0;
   margin-top: 0;
@@ -59,7 +59,7 @@
 }
 
 .works {
-  // display: flex;
+  display: flex;
   flex-wrap: wrap;
   padding-left: 0;
   margin: -15px;
