--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -10,8 +10,8 @@
 .clients__list {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 0px;
-  margin-right: 0px;
+  padding-left: 0;
+  margin-right: 0;
 }
 
 // @media screen and (min-width: 768px) {
